fix minor text/image overlap on fav menu; ;

--- a/static/css/popup.less
+++ b/static/css/popup.less
@@ -98,7 +98,7 @@ td.favButton {
     padding: 0;
     left: -2.14285714em;
     padding-left: 2.14285714em;
-    width: 100%;
+    width: calc(100% - 50px);
 
     &:hover {
       .niceHover;
